--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
-streamlit>=1.11.1
+streamlit==1.12.2
+scikit-learn==1.1.2
+scipy==1.9.1
+plotly==5.10.0
+numpy==1.23.2
+pandas==1.4.4
+matplotlib==3.5.3
