--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -14,8 +14,7 @@ enableXsrfProtection = true
 enableWebsocketCompression = true
 
 [theme]
-primaryColor="#BD93F9"
-backgroundColor="#282A36"
-secondaryBackgroundColor="#44475A"
+base="dark"
+primaryColor="purple"
 textColor="#F8F8F2"
 font="sans serif"
